<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBack"
    tools:context=".Activities.UserRegistration">

    <ImageView
        android:layout_width="1000dp"
        android:layout_height="1000dp"
        android:layout_marginLeft="-540dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="-10dp"
        android:src="@drawable/back_circle_1" />

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitCenter"
        android:onClick="imageUpload"
        android:src="@drawable/no_user_image"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_image">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_name"
                android:textSize="18sp"
                android:fontFamily="@font/segoe_ui"/>
            <EditText
                android:layout_marginTop="-12dp"
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_name_hint"
                android:inputType="text"
                android:background="@drawable/edit_text_back"
                android:paddingLeft="25dp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/poppins_light"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/telephone"
                android:layout_marginTop="-12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_telephone"
                android:textSize="18sp"
                android:fontFamily="@font/segoe_ui"/>
            <EditText
                android:layout_marginTop="-12dp"
                android:id="@+id/user_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_telephone_hint"
                android:inputType="phone"
                android:background="@drawable/edit_text_back"
                android:paddingLeft="25dp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/poppins_light"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/address"
                android:layout_marginTop="-12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_address"
                android:textSize="18sp"
                android:fontFamily="@font/segoe_ui"/>
            <EditText
                android:layout_marginTop="-12dp"
                android:id="@+id/user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_address_hint"
                android:maxLines="5"
                android:inputType="text"
                android:background="@drawable/edit_text_back"
                android:paddingLeft="25dp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/poppins_light"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/occupation"
                android:layout_marginTop="-12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_occupation"
                android:textSize="18sp"
                android:fontFamily="@font/segoe_ui"/>
            <EditText
                android:layout_marginTop="-12dp"
                android:id="@+id/user_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_occupation_hint"
                android:inputType="text"
                android:maxLines="5"
                android:background="@drawable/edit_text_back"
                android:paddingLeft="25dp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/poppins_light"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/password"
                android:layout_marginTop="-12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_password"
                android:textSize="18sp"
                android:fontFamily="@font/segoe_ui"/>
            <EditText
                android:layout_marginTop="-12dp"
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_password_hint"
                android:inputType="textPassword"
                android:maxLines="5"
                android:background="@drawable/edit_text_back"
                android:paddingLeft="25dp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/poppins_light"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/repassword"
                android:layout_marginTop="-12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_repassword"
                android:textSize="18sp"
                android:fontFamily="@font/segoe_ui"/>
            <EditText
                android:layout_marginTop="-12dp"
                android:id="@+id/user_re_enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_repassword"
                android:inputType="textPassword"
                android:maxLines="5"
                android:background="@drawable/edit_text_back"
                android:paddingLeft="25dp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/poppins_light"
                android:textSize="18sp"/>

            <Button
                android:layout_marginTop="15dp"
                android:id="@+id/user_registration"
                android:layout_width="265dp"
                android:layout_height="50dp"
                android:text="@string/reg_register"
                android:padding="16dp"
                android:onClick="userRegistration"
                android:background="@drawable/button_back"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>